# pmd-mask

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: MacOS.yml  Release.yml  Ubuntu.yml  rust.yml
benches/: apply_pmd_mask.rs
src/: error.rs  lib.rs  main.rs
src/genome/: mod.rs
src/genome/coordinate/: chr_name.rs  mod.rs  position.rs
src/genome/coordinate/chr_name/: error.rs  mod.rs
src/genome/orientation/: mod.rs
src/genome/strand/: error.rs  mod.rs
src/logger/: mod.rs
src/mask/: entry.rs  error.rs  mod.rs  threshold.rs
src/mask/entry/: error.rs  mod.rs
src/mask/threshold/: error.rs  mod.rs
src/misincorporation/: error.rs  mod.rs
src/misincorporation/record/: mod.rs
src/parser/: error.rs  mod.rs
tests/: bin.rs  pmd-mask-binary.rs
tests/common/: mod.rs
tests/test-data/bam/dummy-MTonly/: dummy-MTonly-1000.bam  misincorporation.txt
