[package]
name = "pmd-mask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
  opt-level = 3

[dependencies]
  rust-htslib = { version = "0.41", features = ["bzip2", "lzma"] }
  clap        = { version = "4.1", features = ["derive"] }
  log         = "0.4"
  env_logger  = "0.9"
  chrono      = "0.4"
  serde       = { version = "1.0", features = ["derive"] }
  csv         = "1.2"
  num_cpus    = "1.15"