[package]
name = "pmd-mask"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
  opt-level = 3

[[bench]]
name    = "apply_pmd_mask"
harness = false

[dependencies]
  rust-htslib = { version = "0.41", features = ["bzip2", "lzma"] }
  clap        = { version = "4.1", features = ["derive", "wrap_help", "color"] }
  serde       = { version = "1.0", features = ["derive"] }
  thiserror   = "1.0"
  anyhow      = "1.0"
  log         = "0.4"
  env_logger  = "0.9"
  chrono      = "0.4"
  csv         = "1.2"
  num_cpus    = "1.15"
[dev-dependencies]
  serde_test = "1.0"
  assert_cmd = "2.0.8"
  assert_fs  = "1.0.10"
  predicates = "2.1.5"
  criterion  = {version="0.4.0", features=["html_reports"]}